--- a/MVC_Store.csproj
+++ b/MVC_Store.csproj
@@ -180,6 +180,7 @@
     <Content Include="Areas\admin\Views\Dashboard\Index.cshtml" />
     <Content Include="Areas\admin\Views\Pages\Index.cshtml" />
     <Content Include="Areas\admin\Views\Pages\AddPage.cshtml" />
+    <Content Include="Areas\admin\Views\Pages\EditPage.cshtml" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
